@@ -20,14 +20,36 @@ repositories {
 
 allprojects {
     tasks.withType(JavaCompile).configureEach {
-        targetCompatibility = JavaVersion.VERSION_1_8
-        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = 8
+        sourceCompatibility = 8
+
+        options.forkOptions.jvmArgs += [
+                '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
+        ]
     }
 }
 
 dependencies {
-    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
+
+    compileOnly "org.projectlombok:lombok:1.18.42"
+    annotationProcessor "org.projectlombok:lombok:1.18.42"
+
+    // testImplementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    // testImplementation "com.github.Anuken.Arc:arc-core:$mindustryVersion"
+    // testImplementation "com.github.Anuken.Arc:natives:$mindustryVersion"
+    // testImplementation "com.github.Anuken.Arc:backend-headless:$mindustryVersion"
+    // testImplementation(platform("org.junit:junit-bom:6.0.0"))
+    // testImplementation "org.junit.jupiter:junit-jupiter"
+    // testRuntimeOnly "org.junit.platform:junit-platform-launcher"
 }
 
 jar {
@@ -78,6 +100,9 @@ tasks.named("build") {
     dependsOn deploy
 }
 
-test {
-    useJUnitPlatform()
-}
+// test {
+//     useJUnitPlatform()
+//     testLogging {
+//         events "passed", "skipped", "failed"
+//     }
+// }
